# ecb_exchange_rate

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: fastapi-app.yml
docker/: .dockerignore  Dockerfile  docker-compose.yml
ecb_pipeline/: __init__.py  app.py  settings.py
ecb_pipeline/src/: ingestion.py  transformation.py
ecb_pipeline/v1/: ecb_api.py
tests/v1/: v1_test.py
