[tool.poetry]
name = "ecb-exchange-rate"
version = "0.1.0"
description = ""
authors = ["Omole John <contact@johnomole.me>"]
readme = "README.md"

packages = [{include = "ecb_pipeline"}]

[tool.poetry.scripts]
start = "ecb_pipeline.app:main"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
duckdb = "^1.1.1"
opentelemetry-sdk = "^1.27.0"
psycopg = {extras = ["binary"], version = "^3.2.3"}
requests = "^2.32.3"
plotly = "^5.24.1"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Monitoring
uptrace = "^1.26.0"
opentelemetry-api = "^1.21.0"
opentelemetry-sdk = "^1.21.0"
opentelemetry-instrumentation-fastapi = "^0.47b0"

# Add your dependencies here
asyncio = "^3.4.3"
duckdb = "^1.0.0"
# psycopg = {extras = ["binary"], version = "^3.1.18"}
geopandas = "^1.0.1"
pyarrow = "^17.0.0"
plotly = "^5.23.0"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
ruff = "^0.1.9"
lxml = "^5.0.0"
mypy = "^1.5.8"
httpx = "^0.25.0"
pytest = "^7.4.2"
pytest-cov = "^4.0.0"
pytest-env = "^0.8.1"
pytest-asyncio = "^0.21"
pytest-json-report = "^1.5.0"
gitpython = "^3.1.40"
moto = "^4.2.2"
hypothesis = "^6"
schemathesis = "^3.20"

[tool.pytest.ini_options]
pythonpath = [
  "ecb_pipeline"
]
asyncio_mode="auto"
minversion = "7.0"
addopts = "-p no:warnings"
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.mypy]

[[tool.mypy.overrides]]
module = ["fastapi.*", "uvicorn.*", "boto3.*", "botocore.*", "pandas.*",
    "psycopg2.*", "pydantic.*", "ruff.*", "pydantic_settings.*", "starlette.*",
    "duckdb.*", "requests.*", "pytest.*", "importlib_metadata.*"
]
ignore_missing_imports = true